--- a/icode/src/main/resources/application.properties
+++ b/icode/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8081
-storage.directory=<Path>
+storage.directory=C:\Users\yslog\OneDrive\Desktop\icode
 
 spring.servlet.multipart.max-file-size=1MB
 spring.servlet.multipart.max-request-size=1MB
